Disable preview features across the entire build